# lector-pdf-a-markdown

./: .gitignore  README.md  app.py  lector_pdf_a_markdown.spec  pyproject.toml  requirements.txt
.streamlit/: config.toml  secrets.example.toml
data/notebooks/: Copia_de_Untitled0.ipynb
src/pdf_to_md_app/: __init__.py  converter.py  desktop.py  desktop_support.py  usage.py  utils.py
tests/: test_converter.py  test_desktop_support.py  test_utils.py
